clusters/hybrid01/config/immich/immich-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
