clusters/hybrid01/config/immich/immich-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: machine-learning
spec:
  revisionHistoryLimit: 3
  replicas: 1
  automountServiceAccountToken: false
  securityContext: 
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 1000
    fsGroup: 1000
    allowPrivilegeEscalation: false
    readOnlyRootFilesystem: true
  selector:
    matchLabels:
      app: machine-learning
  template:
    metadata:
      labels:
        app: machine-learning
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://openbao.openbao.svc.cluster.local:8200"
        vault.security.banzaicloud.io/vault-skip-verify: "false" 
        vault.security.banzaicloud.io/vault-role: "immich"
    spec:
      hostUsers: false
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v3.3.1
          securityContext: 
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            fsGroup: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 3003
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 750M
            limits:
              memory: 1500M
          volumeMounts:
            - name: cache
              mountPath: /cache
            - name: tmp
              mountPath: /tmp
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
      volumes:
        - name: cache
          emptyDir:
            {}
        - name: tmp
          emptyDir:
            {}
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: server
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 3
  replicas: 1
  automountServiceAccountToken: false
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://openbao.openbao.svc.cluster.local:8200"
        vault.security.banzaicloud.io/vault-skip-verify: "false" 
        vault.security.banzaicloud.io/vault-role: "immich"
    spec:
      hostUsers: false
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v3.3.1
          imagePullPolicy: IfNotPresent
          securityContext: 
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 2283
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 1500M
            limits:
              memory: 2000M
          volumeMounts:
            - name: library
              mountPath: /usr/src/app/upload
            - name: config
              mountPath: /config
          # livenessProbe:
          #   failureThreshold: 5
          #   httpGet:
          #     path: /api/server/ping
          #     port: http
          #   initialDelaySeconds: 0
          #   periodSeconds: 10
          #   timeoutSeconds: 1
          # readinessProbe:
          #   failureThreshold: 5
          #   httpGet:
          #     path: /api/server/ping
          #     port: http
          #   initialDelaySeconds: 0
          #   periodSeconds: 10
          #   timeoutSeconds: 1
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: immich-media
        - name: config
          configMap:
            name: immich
