clusters/hybrid01/config/immich/immich-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: machine-learning
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 3003
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: machine-learning
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: server
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: server
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server-internal
  namespace: immich
  labels:
    app: server
  annotations:
spec:
  publishNotReadyAddresses: true
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: server
