clusters/hybrid01/config/immich/immich-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: immich-external
  namespace: immich
spec:
  hosts:
  - "images.jkulzer.dev"
  gateways:
  - istio-internal-gateway/internal-gateway
  http:
  - match:
    - headers:
        upgrade:
          exact: websocket
    route:
    - destination:
        host: immich-server
        port:
          number: 2883
  - match:
    route:
    - destination:
        host: immich-server
        port:
          number: 2883
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: immich-internal
  namespace: immich
spec:
  hosts:
  - "images.jkulzer.dev"
  gateways:
  - istio-internal-gateway/internal-gateway
  http:
  - match:
    - headers:
        upgrade:
          exact: websocket
    route:
    - destination:
        host: immich-server
        port:
          number: 2883
  - match:
    route:
    - destination:
        host: immich-server
        port:
          number: 2883
